xine-lib (1-beta11)
  * fix fastforward bug (slow playback with unused cpu cicles)
  * fix input_net (tcp) seeking
  * network input plugins do not freeze when no data is available
  * fix seeking in ogg files
  * fix av/desync in ogmfiles
  * fix ac3 in ogm support
  * no more xshm completion events
  * performance improvements (enabled ffmpeg direct rendering)
  * faster seeking
  * simple 10-band equalizer
  * fix scaling of video with a pixel aspect ratio not equal to one
	
xine-lib (1-beta10)
  * loading and displaying png images (e.g. for logos)
  * capability of on-the-fly stream rewiring
  * libdvdnav: PGC based positioning:
    seeking on DVDs now spans the entire feature
  * font encoding cleanup (xinefonts use unicode now)
  * freetype2 support for OSD
  * ffmpeg sync (build 4663). WMV8 decoder enabled.
  * much more accurate time display with DVDs
  * xine health check fixes for non-mtrr machines
  * fixes for high-bandwidth RV30 streams
  * fix for vplayer format subtitles
  * fix for distorted display of some DVD menus
  * DVD title/part MRLs (dvd:/<title>.<part>) work much more reliable
  * OGM subtitles support
  * network controler improvements
  * generic error reporting mechanism using events
  * DVD: report the current menu type
  * DVD: menu calls ("Escape" in xine-ui) can now jump back from the
    menu into the movie as well
	
xine-lib (1-beta9)
  * implement XINE_PARAM_AUDIO_AMP_LEVEL so xine's volume can be
    set independantly from other applications
  * mpeg-4 postprocessing support added to ffmpeg video decoder
  * support HTTP redirections
  * fix mpgaudio demuxer to not try to falsely handle AVI files
  * fix mpeg demuxer to work with chunks bigger than xine's buffers
  * fix libmpeg2 to not wait endlessly for I/P frames,
    fix MPEG artifacts on seek
  * fix the MP3 by content detection for some streams
  * fix segfault with non-multiple of 16 height video and XShm
  * fix BAD STATE error on seek with ALSA audio driver