@@ -1,4 +1,5 @@
 xine-lib (1-beta11)
+  * fix multiple lines subtitles' display in OGM container
   * fix fastforward bug (slow playback with unused cpu cicles)
   * fix input_net (tcp) seeking
   * network input plugins do not freeze when no data is available
